# Optimus

./: .gitignore  .readthedocs.yml  CHANGELOG.rst  LICENCE.txt  MANIFEST.in  Makefile  README.rst  freezer.py  frozen.txt  pytest.ini  setup.cfg  setup.py  sphinx_reload.py  tox.ini
docs/: Makefile  assets.rst  basics.rst  changelog.rst  conf.py  development.rst  i18n.rst  index.rst  install.rst  make.bat  pages.rst  requirements.txt  settings.rst  sphinx_reload.py  templates.rst  usage.rst
docs/api/: assets.rst  index.rst  interfaces.rst  pages.rst  start_project.rst
docs/references/: conf.rst  exceptions.rst  i18n.rst  index.rst  logs.rst  watchers.rst
optimus/: __init__.py  assets.py  cli.py  conf.py  exceptions.py  html5writer.py  i18n.py  importlib.py  init.py  lang.py  logs.py  pages.py  setup_project.py  start_project.py  utils.py  watchers.py
optimus/assets/: __init__.py  rcssmin_webassets_filter.py  registry.py
optimus/builder/: assets.py  bundles.py  pages.py
optimus/cli/: build.py  console_script.py  init.py  po.py  runserver.py  startproject.py  version.py  watch.py
optimus/cliclick/: build.py  console_script.py  po.py  runserver.py  startproject.py  watch.py
optimus/conf/: __init__.py  loader.py  model.py  registry.py
optimus/defaults/: README.rst  __init__.py
optimus/defaults/basic/: __init__.py
optimus/defaults/i18n/: README.rst
optimus/defaults/i18n/scripts/: pages.py.tpl
optimus/defaults/sample/: README.rst  __init__.py
optimus/defaults/sample/scripts/: __init__.py.tpl  gitignore.tpl  pages.py.tpl  settings.py.tpl
optimus/defaults/sample_i18n/: README.rst  __init__.py  requirements.txt
optimus/defaults/sample_i18n/scripts/: gitignore.tpl  pages.py.tpl  settings.py.tpl
optimus/defaults/scripts/: pages.py.tpl  settings.py  settings.py.tpl
optimus/defaults/sources/css/: screen.css
optimus/defaults/sources/templates/: base.html  index.html  readme.html
optimus/i18n/: __init__.py  lang.py  manager.py
optimus/interfaces/: __init__.py  build.py  po.py  runserver.py  starter.py  watch.py
optimus/pages/: __init__.py  builder.py  registry.py
optimus/pages/views/: __init__.py  base.py  rst.py  template.py
optimus/samples/: __init__.py
optimus/samples/basic/: README.rst  __init__.py
optimus/samples/basic/scripts/: Makefile.tpl  config.rb.tpl  gitignore.tpl  pages.py.tpl  prod_settings.py.tpl  requirements.txt.tpl  settings.json.tpl  settings.py.tpl
optimus/samples/i18n/: __init__.py
optimus/samples/i18n/locale/: messages.pot
optimus/samples/i18n/scripts/: Makefile.tpl  (+5 more)
optimus/starters/: __init__.py
optimus/starters/basic/: README.rst  cookiecutter.json
optimus/utils/: __init__.py  assets.py  cleaning_system.py  directory.py  jsons.py  server.py  settings.py  text.py
optimus/watchers/: __init__.py  assets.py  datas.py  templates.py
requirements/: dev.txt  tests.txt
tests/: 00_ping.py  conftest.py
tests/0100_utils/: 01_init_directory.py  02_recursive_directories_create.py  03_synchronize_assets_sources.py  05_display_settings.py  06_get_host_parts.py
tests/01_utils/: 01_init_directory.py  02_recursive_directories_create.py  03_synchronize_assets_sources.py  04_initialize.py  05_display_settings.py  06_get_host_parts.py
tests/0200_conf/: 01_settingsmodel.py  02_import_module.py  03_import_settings_module.py  04_import_settings.py  05_settings.py  10_setup_project.py
tests/02_conf/: 01_settingsmodel.py  01_setup_project.py  02_import_module.py  02_import_settings_module.py  03_import_settings.py  03_import_settings_module.py  04_import_settings.py  04_settings.py  05_settings.py
tests/03_start_project/: 01_get_template_path.py  01_get_template_pythonpath.py  02_check_destination.py  03_get_template_module.py  20_install.py  20_install_basic.py  21_install_i18n.py
tests/03_starters/: 01_resolve_internal_template.py
tests/0400_i18n/: 02_parse_languages.py  03_init_locales_dir.py  06_clone.py  20_lang_object.py
tests/04_i18n/: 01_paths.py  02_parse_languages.py  03_init.py  03_init_locales_dir.py  04_extract.py  04_pot.py  05_safe_write_po.py  06_clone.py  07_init_catalogs.py  08_update_catalogs.py  09_compile_catalogs.py  20_lang_object.py
tests/0500_assets/: 01_registry.py  02_register.py
tests/05_assets/: 01_registry.py  02_register.py
tests/0600_views/: 01_base.py
tests/06_views/: 01_base.py
tests/0700_pages_registry/: 01_registry_init.py  10_add_page.py  20_add_source.py
tests/07_pages_registry/: 01_registry_init.py  10_add_page.py
tests/0800_builder/: 01_builder_init.py  02_get_environnement.py  03_get_globals.py  04_get_translation.py  05_scan.py  06_build.py
tests/08_builder/: 01_builder_init.py  02_get_environnement.py  03_get_globals.py  04_get_translation.py  05_scan.py  05_scan_item.py  06_build.py
tests/0900_watchers/: 01_basehandler.py  02_templates.py  03_assets.py  04_datas.py  handler_helper.py
tests/09_watchers/: 01_basehandler.py  02_templates.py  03_assets.py
tests/1000_interfaces/: 01_starter.py  02_po.py  03_build.py  04_watcher.py  05_runserver.py
tests/1100_cli/: 01_version.py  02_starters.py  03_po_command.py  04_build_command.py  05_watch_command.py  06_runserver_command.py
tests/40_interfaces/: 041_po.py  041_starter.py  042_po.py  043_build.py  044_watcher.py  045_runserver.py
tests/50_cli/: 001_version.py  010_starters.py  010_startproject.py  020_po_command.py  030_build_command.py  040_runserver_command.py  040_watch_command.py  050_runserver_command.py
tests/data_fixtures/basic2_template/: __init__.py  pages.py  settings.py
tests/data_fixtures/basic_template/: __init__.py  pages.py  prod_settings.py  settings.py
tests/data_fixtures/dummy_package/: __init__.py  invalid_import.py  invalid_nameerror.py  invalid_syntax.py  minimal_settings.py  miss_required_settings.py  valid.py
tests/data_fixtures/i18n_template/: README.rst  __init__.py  config.rb  pages.py  prod_settings.py  settings.py
tests/data_fixtures/minimal_basic/: __init__.py  pages.py
tests/data_fixtures/minimal_i18n/: __init__.py  babel.cfg  pages.py  settings.py
(+48 files in other folders)
