;;
;; Optimus package
;;
[metadata]
name = Optimus
version = 1.1.2
description = Optimus is a static site builder using Jinja2, webassets and Babel.
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/Optimus
license = MIT
keywords = Static site, Jinja, Babel, webassets

classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Site Management
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
install_requires =
    six
    click>=5.1,<6.0
    watchdog==0.9.0
    Jinja2>=2.6
    Babel
    webassets
    rcssmin
    jsmin
    colorama
    colorlog
packages = find:
zip_safe = True

[options.extras_require]
dev =
    pytest>=3.4
    flake8
    sphinx
    sphinx-rtd-theme
    sphinx-autobuild
runserver =
    cherrypy

[options.entry_points]
console_scripts =
    optimus-cli = optimus.cli.console_script:cli_frontend

[options.packages.find]
where = .
exclude=
    docs
    tests

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__

[tool:pytest]
addopts = -vv
python_files =
    *.py
testpaths =
    tests
norecursedirs =
    data_fixtures
log_level =
    DEBUG

[tox:tox]
minversion = 3.4.0
envlist = py35

[testenv]

commands =
    pip install -e .[dev]
    pytest -vv tests
