;;
;; Optimus package
;;
[metadata]
name = Optimus
version = 2.1.0
description = Optimus is a static site builder using Jinja2, webassets and Babel.
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/Optimus
project_urls =
    Source Code = https://github.com/sveetch/Optimus
    Issue Tracker = https://github.com/sveetch/Optimus/issues
    Changelog = https://optimus.readthedocs.io/en/latest/changelog.html
    Documentation = https://optimus.readthedocs.io/
license = MIT
keywords = Static site, Jinja, Babel, webassets
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Site Management
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
install_requires =
    click
    watchdog
    Jinja2
    Babel
    webassets
    rcssmin
    jsmin
    colorama
    colorlog
    cookiecutter
packages = find:
zip_safe = True

[options.extras_require]
runserver =
    cherrypy
dev =
    flake8
    pytest
    tox
doc =
    sphinx
    furo
    sphinx-copybutton
doc-live =
    livereload
release =
    twine

[options.entry_points]
console_scripts =
    optimus-cli = optimus.cli.console_script:cli_frontend

[options.packages.find]
where = .
exclude=
    docs
    tests

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__,
    data_fixtures

[tool:pytest]
addopts = -v --tb=long
log_cli = False
python_files =
    *.py
testpaths =
    tests
norecursedirs =
    data_fixtures
log_level =
    DEBUG

[tox:tox]
minversion = 3.4.0
envlist = py{38,310}

[testenv]

commands =
    pip install -e .[dev,runserver]
    pytest -vv tests
